--- a/client/templates/client/connectors/connectors_list.html
+++ b/client/templates/client/connectors/connectors_list.html
@@ -267,7 +267,7 @@
                 </form>
                 {% endif %}
 
-                <a href="{% url 'connector_delete_global' connector.id %}"
+                <a href="{% url 'connector_delete' connector.id %}?next=global"
                    class="text-red-600 hover:text-red-900 dark:text-red-400 dark:hover:text-red-300"
                    onclick="return confirm('Are you sure you want to delete this connector? This action cannot be undone.')">
                   Delete
